--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ImOkHCLMX</string>
     <string name="contact_image">contact_image</string>
+    <string name="title">Are you ok?</string>
 </resources>
