--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="sap_id">Sap id</string>
     <string name="name">Name</string>
     <string name="seat_code">Seat Code</string>
+    <string name="cancel">Cancel</string>
+    <string name="register">Register</string>
 </resources>
